arrumando algumas coisas

--- a/minhavisao.html
+++ b/minhavisao.html
@@ -41,9 +41,9 @@
             <li><a href="medos.html">MEDOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#musica1">musica 1</a></li>
-                <li><a href="#musica2">musica 2</a></li>
-                <li><a href="#musica3">musica 3</a></li>
+                <li><a href="musica.html" href2="#musica1">TE PROCURO</a></li>
+                <li><a href="musica.html" href2="#musica2">MY TEARS RICOCHET</a></li>
+                <li><a href="musica.html"  href2="#musica3">SOMEONE TO STAY</a></li>
               </ul>
           </ul>
         </li>
@@ -79,7 +79,7 @@
           <!--sub-titulo-->
           
         </div>
-        <div class="palavrat" style="text-align: justify;">
+        <div class="palavrat" style="text-align: justify; font-size: 20px;">
               <!--AQUI É ONDE VC COLOCA O TEXTO-->
               <p>A palavra tem um poder incrível na nossa vida cotidiana. Ela é a ferramenta que usamos para nos expressar, compartilhar pensamentos e nos conectar com os outros. A forma como usamos as palavras pode influenciar muito o que as pessoas pensam e sentem. Na comunicação diária, as palavras têm o poder de construir pontes ou criar barreiras entre as pessoas. Uma palavra gentil pode alegrar o dia de alguém, enquanto uma palavra ríspida pode causar mágoa. 
                 <br>
@@ -103,7 +103,7 @@
             <!--sub-titulo-->
             
           </div>
-          <div class="palavrat" style="text-align: justify;">
+          <div class="palavrat" style="text-align: justify; font-size: 20px;">
                 <!--AQUI É ONDE VC COLOCA O TEXTO-->
                 <p>No Brasil, apesar de haver acesso à educação de qualidade para muitos, diversos obstáculos persistem, impactando especialmente aqueles que enfrentam desafios significativos, como a falta de recursos. A introdução da tecnologia nas escolas tem proporcionado avanços notáveis, mas não sem desafios. Infelizmente, nem todas as instituições de ensino e seus alunos dispõem do acesso a essas ferramentas tecnológicas, o que pode afetá-los negativamente. 
                   <br>
