--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <li><a href="medos.html">MEDOS</a></li>
             <li class="dropdown"><a href="musica.html"><span>MUSICAS FAVS</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#musica1">musica 1</a></li>
-                <li><a href="#musica2">musica 2</a></li>
-                <li><a href="#musica3">musica 3</a></li>
+                <li><a href="musica.html" href2="#musica1">TE PROCURO</a></li>
+                <li><a href="musica.html" href2="#musica2">MY TEARS RICOCHET</a></li>
+                <li><a href="musica.html"  href2="#musica3">SOMEONE TO STAY</a></li>
               </ul>
           </ul>
         </li>
