adicionando livros lidos

--- a/literatura.html
+++ b/literatura.html
@@ -48,7 +48,10 @@
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="minhavisao.html">MINHA VISAO</a></li>
-        <li><a class="nav-link scrollto" href="literatura.html">literatura</a></li>
+        <li class="dropdown"><a href="literatura.html"><span>LITERATURA</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a href="livroslidos.html">LIVROS LIDOS</a></li>
+          </ul>
         <li><a class="nav-link scrollto" href="#services">noticias</a></li>
         <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
         
@@ -73,9 +76,9 @@
 
 
         <div class="section-title">
+          <img src="assets/img/periodizacao2.png" alt="">
           <!--titulo-->
-          <span>Periodização da Literatura Portuguesa e Brasileira </span>
-          <h2>Periodização da Literatura Portuguesa e Brasileira </h2>
+          
           <!--sub-titulo-->
 
             <section id="literatura" class="literatura">
