adicionando os livros

--- a/noticias.html
+++ b/noticias.html
@@ -48,9 +48,13 @@
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="minhavisao.html">MINHA VISAO</a></li>
-        <li><a class="nav-link scrollto" href="literatura.html">literatura</a></li>
-        <li><a class="nav-link scrollto" href="#services">noticias</a></li>
+        <li class="dropdown"><a href="literatura.html"><span>LITERATURA</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a href="livroslidos.html">LIVROS LIDOS</a></li>
+          </ul>
+        <li><a class="nav-link scrollto" href="noticias.html">noticias</a></li>
         <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
+        <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
         
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
