--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,9 @@
           <ul>
             <li><a href="livroslidos.html">LIVROS LIDOS</a></li>
           </ul>
-        <li><a class="nav-link scrollto" href="#services">noticias</a></li>
-        <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="noticias.html">noticias</a></li>
+          <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
         
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -65,7 +66,6 @@
     <div class="container">
 
       <div class="section-title">
-        <span>MEU PORTFOLIO</span>
         <h2>MEU PORTFOLIO</h2>
         <p>Meus momentos em fotos</p>
       </div>
@@ -84,7 +84,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (1).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -111,7 +111,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 2"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (2).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 2"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -138,7 +138,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (3).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 3"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -166,7 +166,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (4).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 4"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -194,7 +194,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (5).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 5"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -213,7 +213,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (6).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 6"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -231,7 +231,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (7).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 7"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -259,7 +259,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (8).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 8"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -287,7 +287,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (9).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 9"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -315,7 +315,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (10).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 10"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -343,7 +343,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (11).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 11"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -371,7 +371,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (12).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 12"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -399,7 +399,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (13).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 13"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -427,7 +427,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (14).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 14"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -455,7 +455,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (15).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 15"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -483,7 +483,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (16).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 16"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -511,7 +511,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (17).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 17"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -539,7 +539,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (18).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 18"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -567,7 +567,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (19).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 19"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -585,7 +585,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (20).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 20"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -603,7 +603,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (21).jpeg"data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 21"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
@@ -621,7 +621,7 @@
           <div class="portfolio-info">
             <h4>Familia</h4>
             <p>Familia</p>
-            <a href="assets/img/portfolio/escola/escola1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 1"><i class="bx bx-plus"></i></a>
+            <a href="assets/img/portfolio/familia/familia (22).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Familia 22"><i class="bx bx-plus"></i></a>
           </div>
         </div>
 
