--- a/quemsou.html
+++ b/quemsou.html
@@ -52,8 +52,9 @@
           <ul>
             <li><a href="livroslidos.html">LIVROS LIDOS</a></li>
           </ul>
-        <li><a class="nav-link scrollto" href="#services">noticias</a></li>
-        <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="noticias.html">noticias</a></li>
+          <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
         
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -71,7 +72,7 @@
 
         <div class="section-title">
           <!--TÍTULO-->
-          <span>QUEM SOU EU?</span>
+          
           <h2>QUEM SOU EU?</h2>
           <!--ATÉ AQUI-->
 
