adicionando os eventos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           </ul>
           <li><a class="nav-link scrollto" href="noticias.html">noticias</a></li>
           <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="eventos.html">EVENTOS</a></li>
           <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
         
         
