--- a/conclusao.html
+++ b/conclusao.html
@@ -54,7 +54,8 @@
           </ul>
         <li><a class="nav-link scrollto" href="noticias.html">noticias</a></li>
         <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
-        <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
+        <li><a class="nav-link scrollto " href="eventos.html">EVENTOS</a></li>
+          <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
         
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
