--- a/literatura.html
+++ b/literatura.html
@@ -54,8 +54,8 @@
           </ul>
           <li><a class="nav-link scrollto" href="noticias.html">noticias</a></li>
           <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="eventos.html">EVENTOS</a></li>
           <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
-        
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
