adicionando capas de livros

--- a/livroslidos.html
+++ b/livroslidos.html
@@ -98,7 +98,7 @@
 </div>
 <div class="row" style="height: 600px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Cinco Minutos e a Viuvinha.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">O livro é composto por dois contos fascinantes. Em "Cinco Minutos", somos levados pela história romântica que se desenrola quando o protagonista se atrasa por meros cinco minutos, perdendo seu ônibus habitual e, por acaso, embarcando em outro onde conhece uma jovem intrigante com um véu no rosto. Entre toques inocentes e olhares curiosos, o narrador se apaixona por ela. O mistério se adensa quando ela desce do ônibus, sussurrando em italiano: "Não se esqueça de mim". A busca pela moça se torna a busca pelo amor perdido, com diversos encontros e desencontros.
@@ -125,7 +125,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 </div>
 <div class="row" style="height: 900px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Iracema.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">O livro conta a história de Martim, um português responsável por defender o território brasileiro de outros invasores europeus, que perde-se na mata, em localidade que hoje corresponde ao litoral do Ceará. Iracema, índia tabajara que então repousava entre as árvores, assusta-se com a chegada do estranho, e dispara uma flecha contra Martim. Ele não reage à agressão por ter sido alvejado por uma mulher, e Iracema entende que feriu um inocente. Em pacto de paz, Iracema leva o estrangeiro ferido para sua aldeia e para ter com seu pai, Araquém, o pajé da tribo. Martim é recebido com grande hospitalidade, mas sua chegada não agrada a todos. Durante sua estadia na aldeia, Iracema e Martim aproximam-se e floresce, entre os dois, forte atração. Contudo, Iracema tem um papel importante na tribo: é uma virgem consagrada a Tupã, guardadora do segredo da jurema, um licor sagrado, que levava ao êxtase os índios tabajaras. Entre festejos e batalhas com outras tribos, Iracema e o estrangeiro português envolvem-se amorosamente, e a índia quebra o voto de castidade, o que significa uma condenação à morte. Martim, por sua vez, também é perseguido: Irapuã e seus homens querem beber seu sangue. A aliança com os pitiguaras torna-o um inimigo ainda mais indesejado. Apaixonados, Iracema e Martim precisam fugir da aldeia tabajara antes que a tribo perceba que a virgem rompeu o voto de castidade. Juntam-se a Poti, índio pitiguara, a quem Martim tratava como irmão. Quando os tabajaras percebem a fuga, partem em perseguição aos amantes liderada por Irapuã e Caiubi, o irmão de Iracema. Acabam por encontrar a tribo pitiguara, e uma sangrenta batalha é travada. Caiubi e Irapuã agridem violentamente Martin, e Iracema avança com ferocidade contra os dois, ferindo-os gravemente. Prevendo a derrota, a tribo tabajara bate em retirada. O casal, então, refugia-se em uma praia deserta, onde Martim constrói uma cabana. Iracema passa muito tempo sozinha enquanto o amado fiscaliza as costas.</p>
@@ -150,7 +150,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 </div>
 <div class="row" style="height: 500px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Memórias de um Sargento de Milícias.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">"Memórias de um Sargento de Milícias" narra a vida de Leonardo, um menino travesso que se torna um Sargento de Milícias no Rio de Janeiro. Criado por padrinhos após seus pais brigarem, o barbeiro padrinho deseja que ele se torne padre, mas Leonardo é indisciplinado. Apaixona-se por Luizinha, cuja família é rica. Ao descobrir os planos interesseiros de um pretendente, Leonardo interfere e é expulso.
@@ -176,7 +176,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 </div>
 <div class="row" style="height: 600px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Dom Casmurro.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">O romance é narrado por Bento Santiago, conhecido como Bentinho, que aos 60 anos relata sua história de amor por Capitu, sua vizinha no Rio de Janeiro durante o Segundo Império.
@@ -207,7 +207,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 </div>
 <div class="row" style="height: 550px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/O Cortiço.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">O romance "O Cortiço" narra a história de João Romão, um português ambicioso dono de um cortiço, pedreira e taverna. Sua ascensão social é destacada, enquanto a degradação dos menos favorecidos que vivem no cortiço é evidenciada.
@@ -236,7 +236,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 </div>
 <div class="row" style="height: 500px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Édipo Rei.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">Na lenda grega de Édipo, o rei de Tebas, ele descobre por meio do oráculo de Delfos que está amaldiçoado pelos deuses. Destinado a casar com sua mãe e matar seu pai, Édipo, filho de Laio e Jocasta, enfrenta uma trágica jornada.
@@ -264,7 +264,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 </div>
 <div class="row" style="height: 600px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Memórias Póstumas de Brás Cubas.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">A obra inicia com a declaração da morte de Brás Cubas, narrador e protagonista, que relata suas memórias após ter morrido de pneumonia. Pertencente a uma família rica do século XIX, Brás Cubas descreve seu enterro e, em seguida, recorda diversos momentos de sua vida, desde a infância até a fase adulta.
@@ -292,7 +292,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 </div>
 <div class="row" style="height: 600px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Macunaíma.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">"Macunaíma" inicia com o nascimento do protagonista, conhecido por suas travessuras e preguiça. Ele tem relações sexuais precoces, inclusive com a esposa de seu irmão Jiguê. Após a morte de sua mãe, Macunaíma viaja para a cidade com seus irmãos. Ele se apaixona por Ci, mas após a morte do filho deles, Ci vira uma estrela e deixa um amuleto, a muiraquitã, para Macunaíma.
@@ -321,7 +321,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 </div>
 <div class="row" style="height: 800px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Sagarana.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">Primeira obra de Guimarães Rosa a sair em livro, traz nove contos, nos quais o universo do sertão, com seus vaqueiros e jagunços. Resumo dos contos a seguir: 
@@ -353,9 +353,9 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 <h3><b><i>Vidas Secas – Graciliano Ramos </i></b></h3>
 
 </div>
-<div class="row" style="height: 400px;">
+<div class="row" style="height: 500px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Vidas Secas.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">"Vidas Secas" é uma obra que critica a sociedade brasileira, destacando os desafios enfrentados por uma família pobre de retirantes no sertão nordestino. O casal, Fabiano e Sinhá Vitória, e seus dois filhos anônimos vivem em constante miséria e seca. A cadela, chamada Baleia, é uma figura importante e, curiosamente, tratada como ser humano. O livro, muitas vezes sem diálogos, revela a dificuldade de expressão de Fabiano, enquanto Sinhá Vitória luta por uma vida melhor. Fabiano é injustamente preso, levando-o a refletir sobre sua vida. Apesar das pequenas felicidades familiares, os problemas sociais e a animalização das personagens persistem. O desejo de escapar do sofrimento e encontrar oportunidades melhores permanece, mas o último capítulo, "Fuga," sugere que a seca retorna, iniciando um ciclo contínuo de fugas.</p>
@@ -380,7 +380,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 </div>
 <div class="row" style="height: 700px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/São Bernardo.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">Paulo Honório, criado por uma doceira negra, enfrentou uma infância marcada pela necessidade de sobreviver. Como órfão, dedicou-se a vender cocadas e guiar um cego, experiências que moldaram seu caráter resiliente e empreendedor. Posteriormente, trabalhou arduamente na roça, desenvolvendo uma ética de trabalho robusta que o acompanhou ao longo da vida.
@@ -405,9 +405,9 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 <h3><b><i>Laços de Família – Clarice Lispector  </i></b></h3>
 
 </div>
-<div class="row" style="height: 700px;">
+<div class="row" style="height: 800px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Laços de Família.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">"Laços de Família" apresenta narrativas intensas e profundas que exploram a natureza humana, destacando a complexidade das relações familiares. Clarice Lispector mergulha nas profundezas da psique de seus personagens, revelando nuances emocionais e existenciais. Os contos abrangem uma variedade de temas, desde a solidão e a incomunicabilidade até o impacto do tempo nas relações interpessoais. Alguns contos; Amor: Narra a visita de Ana à amiga Fernanda, que está prestes a morrer. A história revela a essência do amor e a incompreensão entre mãe e filha. Feliz Aniversário: Aborda a celebração do aniversário de Virgínia, uma mulher que se vê diante de um questionamento profundo sobre sua própria vida. Os Laços de Família: Destaca a relação entre mãe e filha, explorando a complexidade e a inadequação de suas emoções. O Jantar: Relata um jantar em que um casal se confronta sobre a natureza da verdade e a falta de comunicação genuína. Preciosidade: Conta a história de uma mulher que, ao cuidar de uma orquídea, confronta suas próprias emoções e desejos. A Imitação da Rosa: Explora o tema da mortalidade e da efemeridade da beleza ao acompanhar a jornada de uma mulher diante da iminência da morte. O Búfalo: Um homem vive um dilema moral ao se deparar com um búfalo em um zoológico.
@@ -431,9 +431,9 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 <h3><b><i>O Primo Basílio – Eça de Queirós </i></b></h3>
 
 </div>
-<div class="row" style="height: 600px;">
+<div class="row" style="height: 700px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/O Primo Basílio.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">"O Primo Basílio" narra a história de Luísa e Jorge, membros da burguesia portuguesa no século XIX, situados em Lisboa. Quando Jorge parte em viagem a trabalho, Luísa recebe a visita de seu primo Basílio, com quem ela já teve um relacionamento anterior. Durante a ausência do marido, eles reavivam o desejo latente.
@@ -461,9 +461,9 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
 <h3><b><i>Senhora – José de Alencar</i></b></h3>
 
 </div>
-<div class="row" style="height: 400px;">
+<div class="row" style="height: 500px;">
 <div >
-<img src="assets/img/TROVADORISMO.jpg" class="livro">
+<img src="assets/img/livros/Senhora.jpg" class="livro">
 </div>
 <!--AQUI É ONDE VC COLOCA O TEXTO-->
 <p class="tlivro">A protagonista Aurélia Camargo é filha de uma costureira pobre e deseja se casar com o namorado, Fernando Seixas. O rapaz, porém, troca Aurélia por Adelaide Amaral, uma menina rica que proporcionaria um futuro mais promissor.
@@ -489,9 +489,9 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
   <h3><b><i>Metamorfose – Franz Kafka</i></b></h3>
   
   </div>
-  <div class="row" style="height: 720px;">
+  <div class="row" style="height: 750px;">
   <div >
-  <img src="assets/img/TROVADORISMO.jpg" class="livro">
+  <img src="assets/img/livros/Metamorfose.jpg" class="livro">
   </div>
   <!--AQUI É ONDE VC COLOCA O TEXTO-->
   <p class="tlivro">Narra a história de Gregor Samsa, um caixeiro-viajante que, apesar de não gostar do trabalho e do chefe, se vê obrigado a mantê-los para sustentar a família, que possui uma dívida. Num dia, ele acorda e descobre que foi transformado em um inseto gigante.
@@ -518,7 +518,7 @@ O reencontro é emocionante, e os dois embarcam em um navio rumo à Europa, onde
     </div>
     <div class="row" style="height: 400px;">
     <div >
-    <img src="assets/img/TROVADORISMO.jpg" class="livro">
+    <img src="assets/img/livros/Os Miseráveis.jpg" class="livro">
     </div>
     <!--AQUI É ONDE VC COLOCA O TEXTO-->
     <p class="tlivro">A História se passa na França do século XIX, onde Jean Valjean, o protagonista, é condenado a cinco anos de prisão por roubar um pão para alimentar sua família faminta. Com um passado trágico, Valjean passa a ser condenado a trabalhos forçados por dezenove anos devido a tentativas de fuga e mau comportamento.
