--- a/quemsou.html
+++ b/quemsou.html
@@ -53,8 +53,8 @@
             <li><a href="livroslidos.html">LIVROS LIDOS</a></li>
           </ul>
           <li><a class="nav-link scrollto" href="noticias.html">noticias</a></li>
-          <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
           <li><a class="nav-link scrollto " href="eventos.html">EVENTOS</a></li>
+          <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
           <li><a class="nav-link scrollto " href="conclusao.html">CONCLUSÃO</a></li>
         
       </ul>
@@ -85,7 +85,7 @@
           <div class="col-lg-8 d-flex flex-column align-items-stretch">
             <div class="content ps-lg-4 d-flex flex-column justify-content-center">
               <!--AQUI É ONDE VC COLOCA O TEXTO-->
-              <p style="font-size: 20px;">Olá! Meu nome é Ana Clara, tenho atualmente 16 anos. Minha cor favorita é o roxo, sou aquariana e estou cursando o 2º ano do Ensino Médio, além de estar no 2º Módulo do Técnico em Logística. Considero essa uma pergunta difícil de responder, mas espero que os leitores consigam conhecer um pouco mais sobre mim por meio deste texto e do meu portfólio. Bom, a palavra que melhor me define é indecisão, por isso não consigo me descrever com total precisão. Sou uma pessoa extrovertida, mas muitas vezes tímida. Me considero comunicativa, mas também gosto de ficar sozinha e, frequentemente, me isolo. Ainda não decidi qual profissão seguir, pois tenho interesse em muitas áreas, mas meu objetivo é conquistar minha independência financeira e trabalhar em algo que goste e que contribua para o bem das pessoas e do mundo de alguma forma.
+              <p style="font-size: 20px; text-align: justify;">Olá! Meu nome é Ana Clara, tenho atualmente 16 anos. Minha cor favorita é o roxo, sou aquariana e estou cursando o 2º ano do Ensino Médio, além de estar no 2º Módulo do Técnico em Logística. Considero essa uma pergunta difícil de responder, mas espero que os leitores consigam conhecer um pouco mais sobre mim por meio deste texto e do meu portfólio. Bom, a palavra que melhor me define é indecisão, por isso não consigo me descrever com total precisão. Sou uma pessoa extrovertida, mas muitas vezes tímida. Me considero comunicativa, mas também gosto de ficar sozinha e, frequentemente, me isolo. Ainda não decidi qual profissão seguir, pois tenho interesse em muitas áreas, mas meu objetivo é conquistar minha independência financeira e trabalhar em algo que goste e que contribua para o bem das pessoas e do mundo de alguma forma.
                 Minha relação com minha família e amigos é geralmente positiva, embora haja desentendimentos, como em qualquer relacionamento. Eles desempenham um papel fundamental na minha vida, e sou extremamente grata por tê-los, independentemente das circunstâncias.
                 Daqui a 10 anos, espero estar trabalhando, construindo minha vida pessoal e profissional. Tenho o desejo de me tornar uma pessoa melhor, participar de trabalhos voluntários, visitar os lugares que sonho e me tornar vegetariana.
                 Honestamente, não sei o que dizer sobre a escola. Grande parte do que sou hoje é resultado das minhas experiências escolares, tanto as boas quanto as ruins. A escola, em parte, nos prepara para a vida, nos proporciona a oportunidade de conhecer pessoas que carregaremos conosco ao longo da vida e nos oferece experiências únicas. No entanto, também é desafiador lidar com a pressão que recai sobre nós, as expectativas em relação ao futuro, o medo de não ser aceito na faculdade dos nossos sonhos e muitas outras preocupações.
